<resources>
    <string name="app_name">CashLite</string>

    // fragment_main
    <string name="tvHistoryFragment">История</string>
    <string name="tvGraphsFragment">Графики</string>
    <string name="tvReportFragment">Отчет</string>
    <string name="tvSettingsFragment">Настройки</string>

    // top_nav_operation_menu
    <string name="addExpenseOperationFragment">Расход</string>
    <string name="addIncomeOperationFragment">Доход</string>
    <string name="addTransferOperationFragment">Перевод</string>

    // fragment_main_history

    <string name="menu_delete_all">Удалить все транзакции</string>
    <string name="menu_delete_import">Удалить импортированные транзакции</string>

    <string name="dialogDeleteAllTransactions">Подтвердить удаление всех транзакций?</string>
    <string name="dialogDeleteImportedTransactions">Подтвердить удаление импортируемых транзакций?</string>
    <string name="dialogButtonYes">Да</string>
    <string name="dialogButtonNo">Нет</string>

    <string name="tvIncomeTitle">Доходы</string>
    <string name="tvBalanceTitle">Баланс</string>
    <string name="tvExpensesTitle">Расходы</string>
    <string name="tvEmptyList">Список пуст</string>

    <string-array name="months_full">
        <item>Январь</item>
        <item>Февраль</item>
        <item>Март</item>
        <item>Апрель</item>
        <item>Май</item>
        <item>Июнь</item>
        <item>Июль</item>
        <item>Август</item>
        <item>Сентябрь</item>
        <item>Октябрь</item>
        <item>Ноябрь</item>
        <item>Декабрь</item>
    </string-array>

    // dialog_month_year_picker

    <string name="all_time_label">Все</string>
    <string name="transactions_label">транзакции</string>

    <string name="tvTitleDialogMonthYearPicker">Выберите период</string>
    <string name="btnAllTime">За все время</string>
    <string name="btnOk">Применить</string>
    <string name="btnReset">Сброс на текущий месяц</string>

    // fragment_details

    <string name="tvDateTitleDetails">Дата</string>
    <string name="tvTypeTitleDetails">Тип</string>
    <string name="tvContactTitleDetails">Кому / От кого</string>
    <string name="tvNoteTitleDetails">Примечание</string>

    <string name="tvDeleteTransactionDetails">Удалить операцию</string>

    <string name="dialogDeleteTransactionTitle">Удалить операцию?</string>
    <string name="dialogDeleteTransactionMessage">Эта операция будет удалена без возможности восстановления.</string>

    // dialog_confirmation_delete_transaction
    <string name="tvTitleDialogConfirmationDeleteTransaction">Удалить операцию?</string>
    <string name="tvDialogConfirmationDeleteTransaction">Эта операция будет удалена без возможности восстановления</string>
    <string name="btnTextDialogConfirmationDeleteTransaction">Подтвердить</string>
    <string name="btnTextCancelDeleteTransaction">Отменить</string>

    // dialog_duplicate_import
    <string name="tvTitleDialogDuplicateImport">Выписка уже импортирована!</string>
    <string name="tvDialogDuplicateImport">Вы можете импортировать не более 1 выписки!\n\nДля импорта новой выписки необходимо удалить все импортируемые транзакции через раздел "История"</string>
    <string name="btnTextCancelDialogDuplicateImport">Закрыть</string>

    // fragment_add_operation
    <string name="btnExpensesTitle">Расход</string>
    <string name="btnIncomeTitle">Доход</string>
    <string name="btnTransferTitle">Перевод</string>

    <string name="expense_supermarket">Супермаркет</string>
    <string name="expense_food">Еда</string>
    <string name="expense_clothes">Одежда</string>
    <string name="expense_car">Автомобиль</string>
    <string name="expense_bus">Транспорт</string>
    <string name="expense_bicycle">Спорт</string>
    <string name="expense_housing">Жилье</string>
    <string name="expense_marketplace">Маркетплейс</string>
    <string name="expense_taxi">Такси</string>
    <string name="expense_education">Образование</string>
    <string name="expense_flag">Путешествие</string>
    <string name="expense_electronics">Электроника</string>
    <string name="expense_phone">Телефон</string>
    <string name="expense_pharmacy">Аптека</string>
    <string name="expense_baby">Детские</string>
    <string name="expense_cat">Домашний питомец</string>

    <string name="income_wallet">Зарплата</string>
    <string name="income_cashback">Кэшбэк</string>
    <string name="income_graph">Инвестиции</string>
    <string name="income_award">Бонусы</string>

    <string name="transfer_expense">Перевод - Отправка</string>
    <string name="transfer_income">Перевод - Получение</string>

    <string name="unknown_expense">Другое</string>
    <string name="unknown_income">Другое</string>
    <string name="unknown_general">Другое</string>

    <string name="btnImport">Импорт выписки</string>

    <string name="observeImportSuccess">Выписка успешно импортирована!</string>
    <string name="observeImportError">Не удалось импортировать выписку!</string>

    // view_add_categories_panel
    <string name="hintAmountOperation">Сумма операции</string>
    <string name="hintNote">Примечание</string>
    <string name="hintDate">Дата</string>
    <string name="tilAmountOperationError">Введите сумму</string>
    <string name="tilAmountNullError">Некорректная сумма</string>

    // view_add_categories_panel
    <string name="contact_expense">Отправить</string>
    <string name="contact_income">Получить</string>
    <string name="hintSum">Сумма</string>
    <string name="hintContact">Кому/От кого</string>
    <string name="hintNoteTrans">Примечание</string>
    <string name="hintDateTrans">Дата</string>
    <string name="btnAddTransfer">Добавить</string>

    <string name="tilContactOperationTransferError">Введите отправителя/получателя</string>
    <string name="tilAmountOperationTransferError">Введите сумму</string>

    // fragment_main_graphs
    <string name="selectGraphsExpense">Расход</string>
    <string name="selectGraphsIncome">Доход</string>
    <string name="emptyGraphs">Нет операций за этот период</string>

    // fragment_graphs_expense
    <string name="selectGraphsExpenseWeek">Неделя</string>
    <string name="selectGraphsExpenseMonth">Месяц</string>
    <string name="selectGraphsExpenseYear">Год</string>

    // fragment_graphs_income
    <string name="selectGraphsIncomeWeek">Неделя</string>
    <string name="selectGraphsIncomeMonth">Месяц</string>
    <string name="selectGraphsIncomeYear">Год</string>

    // fragment_main_report
    <string name="tvTitleReport">Итоги месяца</string>
    <string name="tvSavingsTitle">Сбережения</string>
    <string name="tvTitleReportIncome">Доход</string>
    <string name="tvTitleReportExpense">Расход</string>
    <string name="tvTitleActivityReport">Активность</string>
    <string name="tvOperationsPerMonthReport">Операций за месяц</string>
    <string name="tvAverageBillReport">Средний чек</string>
    <string name="tvRecordExpensesReport">Рекордный расход</string>
    <string name="tvRecordExpensesEmptyReport">Рекордных расходов пока нет</string>
    <string name="tvTitleTopReport">Топ трат</string>
    <string name="tvTopEmptyReport">Данных для топа пока недостаточно</string>

    // fragment_main_settings
    <string name="tvTitleSettings">Настройки</string>
    <string name="tvTitleInterfaceSettings">Интерфейс</string>
    <string name="tvTitleThemeSettings">Темная тема</string>
    <string name="tvTitleLanguageSettings">Язык приложения</string>
    <string name="tvCurrentLanguageSettings">Русский</string>

</resources>