<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/bgDialogDuplicateImport"
    android:padding="20dp">

    <TextView
        android:id="@+id/tvTitleDialogDuplicateImport"
        style="@style/tvTitleDialogDuplicateImport"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvTitleDialogDuplicateImport"
        android:gravity="center"
        android:layout_marginBottom="20dp"/>

    <TextView
        android:id="@+id/tvDialogDialogDuplicateImport"
        style="@style/tvDialogDuplicateImport"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvDialogDuplicateImport"
        android:gravity="center"
        android:layout_marginBottom="20dp"/>

    <Button
        android:id="@+id/btnCancelDialogDuplicateImport"
        style="@style/btnCancelDialogDuplicateImport"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_margin="2dp"
        android:backgroundTint="@color/btnCancelDeleteTransaction"
        android:text="@string/btnTextCancelDialogDuplicateImport" />
</LinearLayout>