<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/bgDialogMonthYearPicker"
    android:padding="20dp">

    <ImageView
        android:id="@+id/btnExit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/icon_back"/>

    <TextView
        android:id="@+id/tvTitleDialogMonthYearPicker"
        style="@style/tvTitleDialogMonthYearPicker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvTitleDialogMonthYearPicker"
        android:gravity="center"
        android:layout_marginBottom="20dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <NumberPicker
            android:id="@+id/monthPicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <NumberPicker
            android:id="@+id/yearPicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

    <Button
        android:id="@+id/btnAllTime"
        style="@style/btnAllTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/btnAllTime" />

    <Button
        android:id="@+id/btnOk"
        style="@style/btnOk"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:backgroundTint="@color/btnOk"
        android:text="@string/btnOk" />

    <Button
        android:id="@+id/btnReset"
        style="@style/btnReset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:backgroundTint="@color/btnReset"
        android:text="@string/btnReset" />
</LinearLayout>