<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/themes"
    tools:context=".ui.fragment.AddNewOperationFragment">

    <GridLayout
        android:id="@+id/gridTypeOfOperation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="3"
        android:rowCount="1"
        android:useDefaultMargins="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/categoryFragment">

        <Button
            android:id="@+id/btnAddExpencesOperation"
            style="@style/btnAddNewOperation"
            android:layout_columnWeight="1"
            android:text="@string/btnExpensesTitle" />

        <Button
            android:id="@+id/btnAddIncomeOperation"
            style="@style/btnAddNewOperation"
            android:text="@string/btnIncomeTitle"
            android:layout_columnWeight="1" />

        <Button
            android:id="@+id/btnAddTransferOperation"
            style="@style/btnAddNewOperation"
            android:text="@string/btnTransferTitle"
            android:layout_columnWeight="1" />
    </GridLayout>

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/categoryFragment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gridTypeOfOperation">

    </androidx.fragment.app.FragmentContainerView>
</androidx.constraintlayout.widget.ConstraintLayout>