<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.newOperation.AddTransferOperationFragment"
    tools:background="@color/fragAll">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chipGroupType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            app:singleSelection="true"
            app:selectionRequired="true">

            <com.google.android.material.chip.Chip
                android:id="@+id/chipExpense"
                style="@style/cgTransfer"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/contact_expense"
                android:checkable="true"
                android:checked="true"/>

            <com.google.android.material.chip.Chip
                android:id="@+id/chipIncome"
                style="@style/cgTransfer"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/contact_income"
                android:checkable="true"
                android:checked="false"/>
        </com.google.android.material.chip.ChipGroup>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilContact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/white"
            android:hint="@string/hintContact"
            android:layout_marginTop="12dp"
            android:layout_marginHorizontal="20dp"
            android:maxLines="3"
            app:hintTextColor="@color/white"
            app:boxStrokeColor="@drawable/text_input_edit_text_transfer_selector"
            app:errorTextColor="@color/white"
            app:boxStrokeErrorColor="@color/white"
            app:errorIconTint="@color/tilErrorEdt">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtContact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:inputType="textCapSentences"
                android:maxLength="40"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilAmount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/white"
            android:hint="@string/hintSum"
            android:layout_marginTop="12dp"
            android:layout_marginHorizontal="20dp"
            app:hintTextColor="@color/white"
            app:boxStrokeColor="@drawable/text_input_edit_text_transfer_selector"
            app:errorTextColor="@color/white"
            app:boxStrokeErrorColor="@color/white"
            app:errorIconTint="@color/tilErrorEdt">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtAmount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:textSize="16dp"
                android:textColor="@color/white"
                android:textStyle="bold"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilNote"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/white"
            android:hint="@string/hintNoteTrans"
            android:layout_marginTop="12dp"
            android:layout_marginHorizontal="20dp"
            app:hintTextColor="@color/white"
            app:boxStrokeColor="@drawable/text_input_edit_text_transfer_selector">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtNote"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:maxLines="3"
                android:maxLength="200"
                android:inputType="textCapSentences" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColorHint="@color/white"
            android:hint="@string/hintDateTrans"
            android:layout_gravity="center"
            android:layout_marginTop="12dp"
            app:boxStrokeColor="@drawable/text_input_edit_text_transfer_selector">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtDate"
                style="@style/edtDateTransfer"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:focusable="false"
                android:clickable="true"
                android:gravity="center" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnAddTransfer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/btnAddTransfer"
            android:text="@string/btnAddTransfer"
            android:textColor="@color/btnTextAddTransfer"
            android:textSize="16dp"/>

    </LinearLayout>
</FrameLayout>