<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fragAll">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/tvTitleSettings"
            style="@style/tvTitleSettings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:text="@string/tvTitleSettings"/>

        <TextView
            android:id="@+id/tvTitleInterfaceSettings"
            style="@style/tvTitleInterfaceSettings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/tvTitleInterfaceSettings"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/cvThemeSettings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/cvThemeSettings"
            android:layout_marginBottom="8dp"
            app:cardCornerRadius="12dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="16dp"
                android:gravity="center_vertical">

                <TextView
                    android:id="@+id/tvTitleThemeSettings"
                    style="@style/tvTitleThemeAndLanguageSettings"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginStart="16dp"
                    android:text="@string/tvTitleThemeSettings" />

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/switchTheme"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:thumbTint="@color/btn_switch_theme_selector"
                    app:trackTint="@color/btn_switch_theme_selector"
                    app:useMaterialThemeColors="false"/>

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cvLanguageSettings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="12dp"
            android:backgroundTint="@color/cvLanguageSettings"
            android:foreground="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="16dp"
                android:gravity="center_vertical">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginStart="16dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvTitleLanguageSettings"
                        style="@style/tvTitleThemeAndLanguageSettings"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tvTitleLanguageSettings" />

                    <TextView
                        android:id="@+id/tvCurrentLanguageSettings"
                        style="@style/tvCurrentLanguageSettings"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="@string/tvCurrentLanguageSettings"/>
                </LinearLayout>

            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>
</androidx.core.widget.NestedScrollView>